--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 /* General Styles */
 body {
     font-family: Arial, sans-serif;
-    color: #333;
+    color: #800000;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-color: #FAEE6E7;
 }
 
 .container {
