--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
     color: #800000;
     margin: 0;
     padding: 0;
-    background-color: #FAEE6E7;
+    background-color: #FFDBE9;
 }
 
 .container {
