--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,9 @@ body {
 }
 
 header {
-    background-color: #111;
+    background-color: #800000;
     padding: 20px 0;
+    color: #FFDBE9;
 }
 
 nav ul {
@@ -48,10 +49,11 @@ p {
 }
 
 footer {
-    background-color: #111;
+    background-color: #800000;
     color: white;
     text-align: center;
     padding: 20px 0;
+    color: #FFDBE9
 }
 
 /* Home Page Styles */
